clusters/default/test-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: foo
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
            path: /
